@@ -163,6 +163,7 @@ Version 0.0.4b (in progress)
 * [Improved] noscript display—thanks Rosenstein.
 * [Added] Help entries.
 * [Improved] top help list now lists only titles of top 50 results.
+* [Added] pagedate check to ensure that stats have actually been updated when check_string is present.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
